# popeye-shipbot

./: README.md
ArduinoMega/mobilityROS/: DCMotor.cpp  DCMotor.hpp  Mecanum.cpp  Mecanum.hpp  UTModule.cpp  UTModule.hpp  mobilityROS.ino
catkin_ws/src/pop_hebi/: CMakeLists.txt  package.xml
catkin_ws/src/pop_hebi/hrdf/: popeye2DOFarm.hrdf  popeye3DOFarm.hrdf
catkin_ws/src/pop_hebi/include/: GripoCommander.h  HebiCommander.h
catkin_ws/src/pop_hebi/src/: 3dof.cpp  3dofPos.cpp  3dof_v2.cpp  GripoCommander.cpp  HebiCommander.cpp  gripo_main.cpp  hebi_main.cpp
catkin_ws/src/pop_hebi/src/gains/: gains3dof.xml
catkin_ws/src/pop_hebi/src/hrdf/: popeye3DOFarm.hrdf
catkin_ws/src/popeye_commander/: CMakeLists.txt  package.xml
catkin_ws/src/popeye_commander/include/: Commander.h  GripoCommander.h  HebiCommander.h  grav_comp.hpp
catkin_ws/src/popeye_commander/missions/: all_stations.txt  hard.txt  mission.txt  mission_file_1.txt  repeat.txt  sample.txt  single_station.txt
catkin_ws/src/popeye_commander/msg/: gripoTarget.msg  hebiCommand.msg  visionRequest.msg
catkin_ws/src/popeye_commander/src/: Commander.cpp  GripoCommander.cpp  HebiCommander.cpp  gripo_main.cpp  hebi_main.cpp  main.cpp
catkin_ws/src/popeye_commander/src/gains/: gains3dof.xml
