<?xml version="1.0"?>
<package format="2">
  <name>pop_hebi</name>
  <version>1.0.0</version>
  <description>Examples of using HEBI components through ROS, using the HEBI C++ API.</description>
  <maintainer email="shobhit@cmu.edu">Shobhit Aggarwal</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>hebi_cpp_api</depend>
  
  <export />
</package>
